--- a/ChenModel.ipynb
+++ b/ChenModel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,109 +12,216 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class ConvolutionBlock(nn.Module):\n",
-    "    def __init__(self,in_channel,out_channel,kernel_size,stride,padding):\n",
-    "        super().__init__()\n",
-    "        self.ConvoLayer_X1=nn.Conv2d(in_channel,out_channel,kernel_size,stride,padding)\n",
-    "        self.Relu_Layer=nn.ReLU()\n",
-    "        self.ConvoLayer_X2=nn.Conv2d(in_channel,out_channel,kernel_size,stride,padding)\n",
+    "# class ConvolutionBlock(nn.Module):\n",
+    "#     def __init__(self,in_channel,out_channel,kernel_size,stride,padding):\n",
+    "#         super().__init__()\n",
+    "#         self.ConvoLayer_X1=nn.Conv2d(in_channel,out_channel,kernel_size,stride,padding)\n",
+    "#         self.Relu_Layer=nn.ReLU()\n",
+    "#         self.ConvoLayer_X2=nn.Conv2d(in_channel,out_channel,kernel_size,stride,padding)\n",
     "\n",
-    "    def forward(self,x):\n",
-    "        return self.ConvoLayer_X2(self.Relu_Layer(self.ConvoLayer_X1(x)))"
+    "#     def forward(self,x):\n",
+    "#         return self.ConvoLayer_X2(self.Relu_Layer(self.ConvoLayer_X1(x)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class ResNetDefine(nn.Module):\n",
-    "    def __init__(self,in_channel,out_channel,first=False):\n",
+    "# class ModelDefine(nn.Module):\n",
+    "#     def __init__(self,in_channel,out_channel):\n",
+    "#         super().__init__()\n",
+    "\n",
+    "#         # if first:\n",
+    "#         self.layer_1=nn.Conv2d(in_channel,out_channel,7,2,1)\n",
+    "#         self.Relu_layer=nn.ReLU()\n",
+    "\n",
+    "#         self.conv_layer=ConvolutionBlock(in_channel,out_channel,3,1,0)\n",
+    "\n",
+    "\n",
+    "#     def forward(self,x):\n",
+    "#         # if self.first:\n",
+    "#         h=self.Relu_layer(x)\n",
+    "#         h=nn.ReLU(torch.add(x,h))\n",
+    "\n",
+    "#         return h\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# class DriverClass(nn.Module):\n",
+    "#     def __init__(self):\n",
+    "#         super().__init__()\n",
+    "#         out_features=[ 64,128,256,512 ]\n",
+    "#         classes=[ 13,27,74,19 ]\n",
+    "#         self.Block=nn.ModuleList([ModelDefine(3,64)])\n",
+    "\n",
+    "#         for i in range(len(out_features)):\n",
+    "#             if i>0:\n",
+    "#                 self.Block.append(ModelDefine(out_features[i-1],out_features[i]))\n",
+    "#             for _ in range(2):\n",
+    "#                 self.Block.append(ModelDefine(out_features[i],out_features[i]))\n",
+    "\n",
+    "#         self.avg_pool=nn.AvgPool2d(kernel_size=3)\n",
+    "#         self.Full_connect_13=nn.Linear(512,13)\n",
+    "\n",
+    "#     def forward(self,x):\n",
+    "#         # for block in self.Block:\n",
+    "#         #     x=block(x)\n",
+    "\n",
+    "#         x=self.avg_pool(x)\n",
+    "#         x=torch.flatten(x)\n",
+    "#         x=self.Full_connect_13(x)\n",
+    "\n",
+    "#         return x\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# if __name__ == \"__main__\":\n",
+    "#     resnet=DriverClass()\n",
+    "#     # data\n",
+    "#     x=torch.rand(3,256,256)\n",
+    "#     print(resnet(x).shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch \n",
+    "from torch import nn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Model(nn.Module):\n",
+    "    def __init__(self):\n",
     "        super().__init__()\n",
+    "        \n",
+    "        self.Block1_X=nn.Conv2d(in_channels=3,out_channels=64,kernel_size=7,stride=2,padding=1)\n",
     "\n",
-    "        if first:\n",
-    "            self.layer_1=nn.Conv2d(in_channel,out_channel,7,2,1)\n",
-    "            self.Relu_layer=nn.ReLU()\n",
+    "        self.Block2_X=nn.Conv2d(in_channels=64,out_channels=64,kernel_size=3,stride=1,padding=0)\n",
     "\n",
-    "        self.conv_layer=ConvolutionBlock(in_channel,out_channel,3,1,0)\n",
+    "        self.Block3_1=nn.Conv2d(in_channels=64,out_channels=128,kernel_size=3,stride=1,padding=0)\n",
+    "        self.Block3_X=nn.Conv2d(in_channels=128,out_channels=128,kernel_size=3,stride=1,padding=0)\n",
+    "\n",
+    "        self.Block4_1=nn.Conv2d(in_channels=128,out_channels=256,kernel_size=3,stride=1,padding=0)\n",
+    "        self.Block4_X=nn.Conv2d(in_channels=256,out_channels=256,kernel_size=3,stride=1,padding=0)\n",
+    "\n",
+    "        self.Block5_1=nn.Conv2d(in_channels=256,out_channels=512,kernel_size=3,stride=1,padding=0)\n",
+    "        self.Block5_X=nn.Conv2d(in_channels=512,out_channels=512,kernel_size=3,stride=1,padding=0)\n",
+    "\n",
+    "        self.Pool=nn.AvgPool2d()\n",
+    "\n",
+    "        self.relu=nn.ReLU()\n",
+    "        self.softmax=nn.Softmax()\n",
     "\n",
     "\n",
     "    def forward(self,x):\n",
-    "        if self.first:\n",
-    "            h=self.Relu_layer\n",
-    "        h=nn.ReLU(torch.add(x,h))\n",
+    "        h=self.relu(self.Block1_X(x))\n",
     "\n",
-    "        return h\n"
+    "        f=self.relu(self.Block2_X(h))\n",
+    "        f=self.relu(self.Block2_X(f))\n",
+    "        f=self.Block2_X(h)\n",
+    "\n",
+    "        h=self.relu(torch.add(f,h))\n",
+    "\n",
+    "        f=self.relu(self.Block3_1(h))\n",
+    "        f=self.relu(self.Block3_X(f))\n",
+    "        f=self.Block3_X(f)\n",
+    "\n",
+    "        h=self.relu(torch.add(f,h))\n",
+    "\n",
+    "        f=self.relu(self.Block4_1(h))\n",
+    "        f=self.relu(self.Block4_X(f))\n",
+    "        f=self.Block4_X(f)\n",
+    "\n",
+    "        h=self.relu(torch.add(f,h))     \n",
+    "\n",
+    "        f=self.relu(self.Block5_1(h))\n",
+    "        f=self.relu(self.Block5_X(f))   \n",
+    "        f=self.Block5_X(f)  \n",
+    "\n",
+    "        h=self.relu(torch.add(f,h)) \n",
+    "\n",
+    "        h=self.Pool(h)\n",
+    "        h=self.softmax(h)\n",
+    "\n",
+    "        return h\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "class DriverClass(nn.Module):\n",
-    "    def __init__(self):\n",
-    "        super().__init__()\n",
-    "        out_features=[ 64,128,256,512 ]\n",
-    "        classes=[ 13,27,74,19 ]\n",
-    "        self.Block=nn.ModuleList([ResNetDefine(3,64,True)])\n",
-    "\n",
-    "        for i in range(len(out_features)):\n",
-    "            if i>0:\n",
-    "                self.Block.append(ResNetDefine(out_features[i-1],out_features[i]))\n",
-    "            for _ in range(2):\n",
-    "                self.Block.append(ResNetDefine(out_features[i],out_features[i]))\n",
-    "\n",
-    "        self.avg_pool=nn.AvgPool2d(kernel_size=3)\n",
-    "        self.Full_connect_13=nn.Linear(512,13)\n",
-    "\n",
-    "    def forward(self,x):\n",
-    "        for block in self.Block:\n",
-    "            x=block(x)\n",
-    "\n",
-    "        x=self.avg_pool(x)\n",
-    "        x=torch.flatten(x)\n",
-    "        x=self.Full_connect_13(x)\n",
-    "\n",
-    "        return x\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'ResNetDefine' object has no attribute 'first'",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[[0.4323, 0.9754, 0.6256,  ..., 0.6632, 0.7486, 0.5478],\n",
+      "         [0.5001, 0.3215, 0.7933,  ..., 0.7517, 0.1129, 0.2329],\n",
+      "         [0.6535, 0.0695, 0.7420,  ..., 0.1212, 0.3411, 0.9734],\n",
+      "         ...,\n",
+      "         [0.8215, 0.2943, 0.6386,  ..., 0.7747, 0.0717, 0.9727],\n",
+      "         [0.2282, 0.7427, 0.6061,  ..., 0.9084, 0.9354, 0.1614],\n",
+      "         [0.9193, 0.5769, 0.2880,  ..., 0.4112, 0.0499, 0.1998]],\n",
+      "\n",
+      "        [[0.2489, 0.8037, 0.6498,  ..., 0.1855, 0.6184, 0.1492],\n",
+      "         [0.3651, 0.6977, 0.7475,  ..., 0.0053, 0.4121, 0.1327],\n",
+      "         [0.4532, 0.4507, 0.7447,  ..., 0.9161, 0.3713, 0.2343],\n",
+      "         ...,\n",
+      "         [0.3685, 0.7169, 0.7485,  ..., 0.7906, 0.3653, 0.0980],\n",
+      "         [0.7817, 0.2708, 0.4452,  ..., 0.9033, 0.9845, 0.1786],\n",
+      "         [0.0345, 0.0575, 0.4841,  ..., 0.0445, 0.8213, 0.9517]],\n",
+      "\n",
+      "        [[0.7886, 0.1502, 0.7044,  ..., 0.5534, 0.6337, 0.5261],\n",
+      "         [0.2312, 0.1509, 0.4266,  ..., 0.9402, 0.2678, 0.9004],\n",
+      "         [0.7707, 0.7670, 0.4431,  ..., 0.4936, 0.9720, 0.2111],\n",
+      "         ...,\n",
+      "         [0.0568, 0.8453, 0.0614,  ..., 0.5171, 0.6847, 0.2187],\n",
+      "         [0.7669, 0.2686, 0.0365,  ..., 0.4132, 0.7091, 0.8553],\n",
+      "         [0.8857, 0.4134, 0.1830,  ..., 0.6957, 0.5252, 0.2467]]])\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "Model.__init__() takes 1 positional argument but 2 were given",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[11], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m# data\u001b[39;00m\n\u001b[0;32m      4\u001b[0m x\u001b[38;5;241m=\u001b[39mtorch\u001b[38;5;241m.\u001b[39mrand(\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m3\u001b[39m,\u001b[38;5;241m256\u001b[39m,\u001b[38;5;241m256\u001b[39m)\n\u001b[1;32m----> 5\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mresnet\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39mshape)\n",
-      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\torch\\nn\\modules\\module.py:1532\u001b[0m, in \u001b[0;36mModule._wrapped_call_impl\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m   1530\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_compiled_call_impl(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)  \u001b[38;5;66;03m# type: ignore[misc]\u001b[39;00m\n\u001b[0;32m   1531\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m-> 1532\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_call_impl\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\torch\\nn\\modules\\module.py:1541\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m   1536\u001b[0m \u001b[38;5;66;03m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[0;32m   1537\u001b[0m \u001b[38;5;66;03m# this function, and just call forward.\u001b[39;00m\n\u001b[0;32m   1538\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m (\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_backward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_backward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_forward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_forward_pre_hooks\n\u001b[0;32m   1539\u001b[0m         \u001b[38;5;129;01mor\u001b[39;00m _global_backward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_backward_hooks\n\u001b[0;32m   1540\u001b[0m         \u001b[38;5;129;01mor\u001b[39;00m _global_forward_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[1;32m-> 1541\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mforward_call\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1543\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m   1544\u001b[0m     result \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n",
-      "Cell \u001b[1;32mIn[9], line 19\u001b[0m, in \u001b[0;36mDriverClass.forward\u001b[1;34m(self, x)\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mforward\u001b[39m(\u001b[38;5;28mself\u001b[39m,x):\n\u001b[0;32m     18\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m block \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mBlock:\n\u001b[1;32m---> 19\u001b[0m         x\u001b[38;5;241m=\u001b[39m\u001b[43mblock\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     21\u001b[0m     x\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mavg_pool(x)\n\u001b[0;32m     22\u001b[0m     x\u001b[38;5;241m=\u001b[39mtorch\u001b[38;5;241m.\u001b[39mflatten(x)\n",
-      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\torch\\nn\\modules\\module.py:1532\u001b[0m, in \u001b[0;36mModule._wrapped_call_impl\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m   1530\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_compiled_call_impl(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)  \u001b[38;5;66;03m# type: ignore[misc]\u001b[39;00m\n\u001b[0;32m   1531\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m-> 1532\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_call_impl\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\torch\\nn\\modules\\module.py:1541\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m   1536\u001b[0m \u001b[38;5;66;03m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[0;32m   1537\u001b[0m \u001b[38;5;66;03m# this function, and just call forward.\u001b[39;00m\n\u001b[0;32m   1538\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m (\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_backward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_backward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_forward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_forward_pre_hooks\n\u001b[0;32m   1539\u001b[0m         \u001b[38;5;129;01mor\u001b[39;00m _global_backward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_backward_hooks\n\u001b[0;32m   1540\u001b[0m         \u001b[38;5;129;01mor\u001b[39;00m _global_forward_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[1;32m-> 1541\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mforward_call\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1543\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m   1544\u001b[0m     result \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n",
-      "Cell \u001b[1;32mIn[8], line 13\u001b[0m, in \u001b[0;36mResNetDefine.forward\u001b[1;34m(self, x)\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mforward\u001b[39m(\u001b[38;5;28mself\u001b[39m,x):\n\u001b[1;32m---> 13\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfirst\u001b[49m:\n\u001b[0;32m     14\u001b[0m         h\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mRelu_layer\n\u001b[0;32m     15\u001b[0m     h\u001b[38;5;241m=\u001b[39mnn\u001b[38;5;241m.\u001b[39mReLU(torch\u001b[38;5;241m.\u001b[39madd(x,h))\n",
-      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\torch\\nn\\modules\\module.py:1709\u001b[0m, in \u001b[0;36mModule.__getattr__\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m   1707\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m name \u001b[38;5;129;01min\u001b[39;00m modules:\n\u001b[0;32m   1708\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m modules[name]\n\u001b[1;32m-> 1709\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAttributeError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mtype\u001b[39m(\u001b[38;5;28mself\u001b[39m)\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__name__\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m object has no attribute \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mname\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'ResNetDefine' object has no attribute 'first'"
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[9], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m image \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mrand( \u001b[38;5;241m3\u001b[39m, \u001b[38;5;241m224\u001b[39m, \u001b[38;5;241m224\u001b[39m)\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(image)\n\u001b[1;32m----> 4\u001b[0m x\u001b[38;5;241m=\u001b[39m\u001b[43mModel\u001b[49m\u001b[43m(\u001b[49m\u001b[43mimage\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[1;31mTypeError\u001b[0m: Model.__init__() takes 1 positional argument but 2 were given"
      ]
     }
    ],
    "source": [
     "if __name__ == \"__main__\":\n",
-    "    resnet=DriverClass()\n",
-    "    # data\n",
-    "    x=torch.rand(1,3,256,256)\n",
-    "    print(resnet(x).shape)"
+    "    image = torch.rand( 1,3, 224, 224)\n",
+    "    print(image)\n",
+    "    x=Model(image)"
    ]
   },
   {
