updated helper function

--- a/FashionMNIST_CNN_Model.ipynb
+++ b/FashionMNIST_CNN_Model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -10,7 +10,9 @@
      "output_type": "stream",
      "text": [
       "2.3.1+cpu\n",
-      "0.18.1+cpu\n"
+      "0.18.1+cpu\n",
+      "helper function already exists\n",
+      "import success\n"
      ]
     }
    ],
@@ -29,7 +31,21 @@
     "from tqdm import tqdm\n",
     "\n",
     "print(torch.__version__)\n",
-    "print(torchvision.__version__)"
+    "print(torchvision.__version__)\n",
+    "\n",
+    "\n",
+    "import requests\n",
+    "from pathlib import Path\n",
+    "if Path(\"helper_functions.py\").is_file():\n",
+    "    print(\"helper function already exists\")\n",
+    "else:\n",
+    "    print(\"downloading.....\")\n",
+    "    request=requests.get(\"https://raw.githubusercontent.com/mrdbourke/pytorch-deep-learning/main/helper_functions.py \")\n",
+    "    with open(\"helper_functions.py\",\"wb\") as f:\n",
+    "        f.write(request.content)\n",
+    "\n",
+    "from helper_functions import plot_predictions,plot_decision_boundary\n",
+    "print(\"import success\")"
    ]
   },
   {
