--- a/test.ipynb
+++ b/test.ipynb
@@ -12,71 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def box_blur_simple(file, r=100):\n",
-    "  img = Image.open(file).convert('RGB')\n",
-    "  new_img = img.copy()\n",
-    "  width, height = img.size\n",
-    "  \n",
-    "  for x in range(r, width - r):\n",
-    "    for y in range(r, height - r):\n",
-    "      # Initialize sum variables for each color channel (Red, Green, Blue)\n",
-    "      sum_red = 0\n",
-    "      sum_green = 0\n",
-    "      sum_blue = 0\n",
-    "      # Iterate through surrounding pixels within blur radius\n",
-    "      for dx in range(-r, r + 1):\n",
-    "        for dy in range(-r, r + 1):\n",
-    "          # Consider pixels within image boundaries\n",
-    "          if 0 <= x + dx < width and 0 <= y + dy < height:\n",
-    "            pixel = img.getpixel((x + dx, y + dy))\n",
-    "            sum_red += pixel[0]\n",
-    "            sum_green += pixel[1]\n",
-    "            sum_blue += pixel[2]\n",
-    "      # Calculate average for each color channel\n",
-    "      avg_red = sum_red // ((2 * r + 1) ** 2)\n",
-    "      avg_green = sum_green // ((2 * r + 1) ** 2)\n",
-    "      avg_blue = sum_blue // ((2 * r + 1) ** 2)\n",
-    "      # Set the averaged pixel value in the new image\n",
-    "      new_img.putpixel((x, y), (avg_red, avg_green, avg_blue))\n",
-    "  \n",
-    "  return new_img\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[5], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m img1\u001b[38;5;241m=\u001b[39mImage\u001b[38;5;241m.\u001b[39mopen(file)\n\u001b[0;32m      4\u001b[0m img1\u001b[38;5;241m.\u001b[39mshow()\n\u001b[1;32m----> 5\u001b[0m img\u001b[38;5;241m=\u001b[39m\u001b[43mbox_blur_simple\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      6\u001b[0m img\u001b[38;5;241m.\u001b[39mshow()\n",
-      "Cell \u001b[1;32mIn[4], line 17\u001b[0m, in \u001b[0;36mbox_blur_simple\u001b[1;34m(file, r)\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m dy \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m-\u001b[39mr, r \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m):\n\u001b[0;32m     15\u001b[0m   \u001b[38;5;66;03m# Consider pixels within image boundaries\u001b[39;00m\n\u001b[0;32m     16\u001b[0m   \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;241m0\u001b[39m \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m x \u001b[38;5;241m+\u001b[39m dx \u001b[38;5;241m<\u001b[39m width \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;241m0\u001b[39m \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m y \u001b[38;5;241m+\u001b[39m dy \u001b[38;5;241m<\u001b[39m height:\n\u001b[1;32m---> 17\u001b[0m     pixel \u001b[38;5;241m=\u001b[39m \u001b[43mimg\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgetpixel\u001b[49m\u001b[43m(\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mdx\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mdy\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     18\u001b[0m     sum_red \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m pixel[\u001b[38;5;241m0\u001b[39m]\n\u001b[0;32m     19\u001b[0m     sum_green \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m pixel[\u001b[38;5;241m1\u001b[39m]\n",
-      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\PIL\\Image.py:1612\u001b[0m, in \u001b[0;36mImage.getpixel\u001b[1;34m(self, xy)\u001b[0m\n\u001b[0;32m   1610\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mpyaccess:\n\u001b[0;32m   1611\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mpyaccess\u001b[38;5;241m.\u001b[39mgetpixel(xy)\n\u001b[1;32m-> 1612\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mim\u001b[38;5;241m.\u001b[39mgetpixel(\u001b[38;5;28mtuple\u001b[39m(xy))\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
-   "source": [
-    "if __name__ == \"__main__\":\n",
-    "    file=\"D05_img_telegram_0139.jpg\"\n",
-    "    img1=Image.open(file)\n",
-    "    img1.show()\n",
-    "    img=box_blur_simple(file)\n",
-    "    img.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,6 +73,41 @@
     "  # ... (implementation details for box blur kernel using PyTorch)\n",
     "  raise NotImplementedError(\"Please implement box_blur_kernel using PyTorch operations on GPU\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NotImplementedError",
+     "evalue": "Please implement box_blur_kernel using PyTorch operations on GPU",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNotImplementedError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[5], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m img1\u001b[38;5;241m=\u001b[39mImage\u001b[38;5;241m.\u001b[39mopen(file)\n\u001b[0;32m      4\u001b[0m img1\u001b[38;5;241m.\u001b[39mshow()\n\u001b[1;32m----> 5\u001b[0m img\u001b[38;5;241m=\u001b[39m\u001b[43mbox_blur_gpu\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      6\u001b[0m img\u001b[38;5;241m.\u001b[39mshow()\n",
+      "Cell \u001b[1;32mIn[3], line 20\u001b[0m, in \u001b[0;36mbox_blur_gpu\u001b[1;34m(file, r)\u001b[0m\n\u001b[0;32m     17\u001b[0m img_tensor \u001b[38;5;241m=\u001b[39m img_tensor\u001b[38;5;241m.\u001b[39mto(device)\n\u001b[0;32m     19\u001b[0m \u001b[38;5;66;03m# Apply box blur using a kernel on the GPU (implementation details omitted)\u001b[39;00m\n\u001b[1;32m---> 20\u001b[0m blurred_tensor \u001b[38;5;241m=\u001b[39m \u001b[43mbox_blur_kernel\u001b[49m\u001b[43m(\u001b[49m\u001b[43mimg_tensor\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mr\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdevice\u001b[49m\u001b[43m)\u001b[49m  \u001b[38;5;66;03m# Replace with your GPU kernel implementation\u001b[39;00m\n\u001b[0;32m     22\u001b[0m \u001b[38;5;66;03m# Convert blurred tensor back to NumPy array and reshape to image format (HWC)\u001b[39;00m\n\u001b[0;32m     23\u001b[0m blurred_arr \u001b[38;5;241m=\u001b[39m blurred_tensor\u001b[38;5;241m.\u001b[39msqueeze(\u001b[38;5;241m0\u001b[39m)\u001b[38;5;241m.\u001b[39mcpu()\u001b[38;5;241m.\u001b[39mnumpy()\u001b[38;5;241m.\u001b[39mtranspose((\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m, \u001b[38;5;241m0\u001b[39m))\n",
+      "Cell \u001b[1;32mIn[3], line 36\u001b[0m, in \u001b[0;36mbox_blur_kernel\u001b[1;34m(img_tensor, r, device)\u001b[0m\n\u001b[0;32m     31\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mbox_blur_kernel\u001b[39m(img_tensor, r, device):\n\u001b[0;32m     32\u001b[0m   \u001b[38;5;66;03m# Implement the box blur logic using PyTorch operations on the GPU (e.g., convolutions)\u001b[39;00m\n\u001b[0;32m     33\u001b[0m   \u001b[38;5;66;03m# This function should take the image tensor, blur radius, and device as input\u001b[39;00m\n\u001b[0;32m     34\u001b[0m   \u001b[38;5;66;03m# and return the blurred tensor on the specified device.\u001b[39;00m\n\u001b[0;32m     35\u001b[0m   \u001b[38;5;66;03m# ... (implementation details for box blur kernel using PyTorch)\u001b[39;00m\n\u001b[1;32m---> 36\u001b[0m   \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mNotImplementedError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPlease implement box_blur_kernel using PyTorch operations on GPU\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mNotImplementedError\u001b[0m: Please implement box_blur_kernel using PyTorch operations on GPU"
+     ]
+    }
+   ],
+   "source": [
+    "if __name__ == \"__main__\":\n",
+    "    file=\"D05_img_telegram_0139.jpg\"\n",
+    "    img1=Image.open(file)\n",
+    "    img1.show()\n",
+    "    img=box_blur_gpu(file)\n",
+    "    img.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
