--- a/Different_Attacks_Using_Lib/PGD attack.ipynb
+++ b/Different_Attacks_Using_Lib/PGD attack.ipynb
@@ -250,6 +250,27 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "6c1eab02",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(torch.Size([1, 3, 224, 224]), torch.Size([1]))"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "image.shape,label.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "ca1e5a08",
    "metadata": {},
    "outputs": [],
